-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
Meta Quest 3
-
-
e23aa1d16 (dev), 7615d6f42 (6.8), ba7dcb65d (dev), 882d37ca3 (6.10), 39ccc9ace (6.9), 31d7cec2a (tqtc/lts-6.8), 0f534a6ce (dev), 09e0c8b98 (6.10), bccd8b4ef (6.9), e2a25789b (tqtc/lts-6.8), 640948c05 (dev), 80c5be1be (6.10), 890d24ef3 (tqtc/lts-6.8)
The xr_input example crashes on the Quest 3 when clicking on a slider or button without moving. It does not crash if the virtual mouse is moved between press and release. It does not crash if the example is modified to use Basic style instead of Android style
- relates to
-
QTBUG-140488 Basic style broken on visionOS
-
- Reported
-
-
QTBUG-137953 Rendering Enhancements and General Hardening of Embedded Views
-
- In Progress
-
- resulted in
-
QTBUG-139309 REG: Material Slider's hovered effects visible when they shouldn't be
-
- Closed
-
-
QTBUG-139630 Qt Quick animations get stuck
-
- Closed
-
(1 mentioned in)