Workaround for crash with Material style

The underlying platform's native style does not really make sense in VR
anyway, so we might as well use the same style on all platforms.

Task-number: QTBUG-126193
Pick-to: 6.8
Change-Id: If8d68554780ce4e23fa99e2597d6ff2844f161a7
Reviewed-by: Christian Strømme <christian.stromme@qt.io>