examples/quick3d/xr_input/main.cpp
@@ -6,6 +6,8 @@
 
 int main(int argc, char *argv[])
 {
+    qputenv("QT_QUICK_CONTROLS_STYLE", "Basic");
+
     QGuiApplication app(argc, argv);
 
     QCoreApplication::setApplicationName("Qt Simple Input Example");
